# progetti_rust

./: README.md  esempio_sqlite_remoto.txt  interrogandochatgpt.txt  progetto-rust-dioxus-organizzato-in-piùfile.txt
casabaldini/: Cargo.toml  Dioxus.toml  Dioxus_.casabaldini_toml  _Cargo_save._toml_  casabaldini.sqlite  index.html
casabaldini-api/: Cargo.toml
casabaldini-api/src/: main.rs
casabaldini/assets/: index.html  manifest.json  tailwind.css  test.txt
casabaldini/assets/css/: main.css  popin.css
casabaldini/assets/home/js/: mio.js  slider-init.js
casabaldini/src/: _main_.rs.bak  _main_back2._rs_  _main_mod._rs_  _main_prove_senzabase64._rs_  config.rs  main.rs  main_con_problemi_da gemini_con cargo_run.rs  main_dx.rs  main_primotentativo._rs_  menu._rs_
casabaldini/src/components/: blog.rs  casabaldini.rs  dovemangiare.html  dovemangiare.rs  elencosliders.rs  fastimage.rs  home.rs  nav_item.rs  navbar.rs  prenotazioni.rs
stefanocatani/: casabaldini,sql  cript-per-dioxus.txt  sliders_da_sqlite.csv  sql_insert_sliders_postgres.txt
stefanocatani/assets/: tailwind.css
stefanocatani/assets/home/js/: .Gruntfile.js.kate-swp
stefanocatani/src/: _main_tentativo_axum.rs  mainrs.bach
stefanocatani/src/components/: dovemangiare.rs  hero.rs  navbar.rs
test/: Cargo.toml  Dioxus.toml  casabaldini.sqlite  tab_sliders_sep.sql  tailwind.css  test.sh
test/assets/: tailwind.css
test/assets/css/: main.css  tailwind.css
test/assets/home/js/: mio.js
test/src/: _main_funziona._rs_  config.rs  main.rs  models.rs  prelude.rs
test/src/components/: casabaldini.rs  dovemangiare.html  dovemangiare.rs  echo.rs  elencosliders.rs  fastimage.rs  hero.rs  home.rs  linkutili.rs  mod.rs  nav_item.rs  prenotazioni.html  prenotazioni.rs
