
[package]
name = "casabaldini"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "web"] }
serde = { version = "1.0", features = ["derive"] }
# Altre dipendenze comuni...

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# SPOSTA QUI TUTTO CIÒ CHE RIGUARDA IL SERVER E IL DATABASE
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tower-http = { version = "0.5", features = ["fs"] }

[features]
default = ["web"]
server = ["dioxus/fullstack", "dioxus/server", "sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]
##server = ["dioxus/axum", "sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
##server = ["dioxus/server"]

