[package]
name = "test"
version = "0.1.0"
authors = ["carlozanieri <carlo.zanieri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
serde = "1.0.228"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "=0.8"
tower-http = { version = "0.6.8", features = ["fs"] }
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
