[package]
name = "test"
version = "0.1.0"
authors = ["carlozanieri <carlo.zanieri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.6.2", features = ["router", "fullstack"] }
dioxus-mobile = "0.6.2"
kuchiki = "0.8.1"
serde = "1.0.228"
web-sys = "0.3.88"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "=0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
#sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
#sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
